--- a/src/Components/ProjectContainer/ProjectContainer.css
+++ b/src/Components/ProjectContainer/ProjectContainer.css
@@ -1,6 +1,7 @@
 .ProjectContainer{
     width: 460px;
-    height: 400px;
+    height: auto;
+    min-height: 480px;
     border-radius: 13px;
     border: 1px solid #EAEAEA;
     background: #FFF;
@@ -45,6 +46,11 @@
     transition: color 1s;
 
 }
+.darkMode-Container > .tags > .projectTag > h5{
+    color: #b9b9b9;
+    transition: color 1s;
+
+}
 .user > img{
     width: 36px;
     height: 36px;
@@ -74,12 +80,33 @@ line-height: normal;
 }
 .imagePrincipal >img{
     width: 100%;
-    height: 100%;
     object-fit: fill;
     image-rendering:auto;
     border-radius: 4px;
     transition: 1s;
-
+    height: 282px;
+}
+.projectTag{
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    height: 20px;
+    background-color: rgb(43, 43, 43);
+}
+.tags{
+    width: 100%;
+    height: 8%;
+    display: flex;
+    align-items: center;
+}
+.projectTag > h5{
+    margin: 0;
+    color: white;
+    font-size: 10px;
+    font-family: Capriola;
+    
 }
 .widgets{
     margin-top: 10px;
