--- a/src/Components/Pages/Contact/Contact.css
+++ b/src/Components/Pages/Contact/Contact.css
@@ -122,3 +122,21 @@
         margin-top: 10%;
     }
 }
+@media (max-width: 600px) {
+    .ContactContainer{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 0px;
+
+        
+    }
+    .Contact{
+        height: 100%;
+        margin-top: 10%;
+        margin-bottom: 20%;
+    }
+    .imagePaper > img{
+        display: none;
+    }
+}
