--- a/src/Components/sideBar/Sidebar.css
+++ b/src/Components/sideBar/Sidebar.css
@@ -5,6 +5,7 @@ height: 305px;
 padding: 0px 12px;
 flex-direction: column;
 justify-content: center;
+z-index: 99;
 align-items: center;
 gap: 41px;
 flex-shrink: 0;
@@ -65,5 +66,44 @@ background: #FFF;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+}
+
+@media (max-width: 1000px) {
+    .sidebar{
+        top: unset;
+        right: 0px;
+        border-radius: 13px;
+    }
+}
+@media (max-width: 600px) {
+    .sidebar{
+        width: 100%;
+        height: 10%;
+        z-index: 5;
+        display: flex;
+        position:fixed;
+        border-radius: 0;
+        top: unset;
+        bottom: 0;
+        right: unset;
+        padding: 0;
+
+    }
+    .sidebarContainer > ul{
+        flex-direction: row;
+    }
+    
+    .sidebarContainer > ul > li{
+        height: 100%;
+
+        width: 100%;
+    }
+    
+    .sidebarContainer > ul > li > a{
+        height: 50%;
+
+        width: 50%;
+    }
     
 }
