--- a/src/Components/Notification/NotificationError.css
+++ b/src/Components/Notification/NotificationError.css
@@ -11,9 +11,10 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    z-index: 5;
+    z-index: 9999;
 }
 .notificationErrorContainer > h2{
     color: white;
     font-size: 80%;
+    font-family: Open Sans;
 }
