--- a/src/Components/Notification/NotificationOkay.css
+++ b/src/Components/Notification/NotificationOkay.css
@@ -10,10 +10,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 5;
+    z-index: 9999;
     border-radius: 10px;
 }
 .notificationContainer > h2{
     color: white;
-    font-size: 100%;
+    font-size: 80%;
+    font-family: Open Sans;
+
 }
