--- a/src/Components/ProjectContainer/ProjectContainer.css
+++ b/src/Components/ProjectContainer/ProjectContainer.css
@@ -5,7 +5,7 @@
     border-radius: 13px;
     border: 1px solid #EAEAEA;
     background: #FFF;
-    padding: 30px;
+    padding: 10px 30px;
     display: flex;
     flex-direction: column;
     z-index: 2;
