--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -6,10 +6,11 @@
     justify-content: center;
     gap: 28px;
     min-height: 580px;
+    overflow-x: hidden;
 }
 .profile{
     width: 18%;
-    min-width: 300px;
+    min-width: 280px;
     height: 370px;
     display: flex;
     align-items: center;
@@ -20,9 +21,34 @@
 .profile >img{
     position: absolute;
     top: 0;
-    width: 35%;
+    width: 40%;
 
 }
+
+.downloadCV{
+    width: 38px;
+    height: 38px;
+    background-color: #232531;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.profile > .darkMode-Container> .socialMedia> .downloadCV{
+    background-color: #464c6d;
+}
+
+.downloadCV:hover> abbr > svg > .arrow{
+    stroke: rgb(206, 206, 206);
+    transform: translateY(-4px);
+    transition: .5s;
+}
+.downloadCV> abbr > svg > .arrow{
+    transform: translateY(0px);
+    transition: .5s;
+}
+
+
 .about{
     height: 330px;
     background-color: white;
@@ -39,8 +65,8 @@ transition: background 1s, border 1s;
 
 }
 .personalInfo{
-    width: 100%;
-    height: 280px;
+    width: 90%;
+    height: 300px;
     background-color: white;
     border: 1px solid #EAEAEA;
 background: #FFF;
@@ -50,7 +76,6 @@ align-items: center;
 justify-content: center;
 flex-direction: column;
 transition: background 1s, border 1s;
-
 gap: 13px;
 
 }
